syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.all.third";
option java_outer_classname = "ThirdProto";

service DataService {
	rpc GetDataDetail (CompleteData) returns (DataDetail);

	rpc PostData (stream CompleteData) returns (DataDetail);
	
	rpc GetData (CompleteData) returns (stream CompleteData);
	
	rpc PostAndGetData (stream CompleteData) returns (stream CompleteData);
}

message AuditFields {
	string creBy = 1;
	string creOn = 2;
	string updBy = 3;
	string updOn = 4;
}

message Data {
	string textData = 1;
	bytes byteData = 2;
}

message CompleteData {
	string dataId = 1;
    string dataType = 2;
    Data data = 3;
    bool enabled = 4;
    AuditFields auditFields = 5;
}

message DataDetail {
	string dataId = 1;
	string dataType = 2;
    bool enabled = 3;
}

service StreamingService {
    rpc UnaryCall (UnaryRequest) returns (UnaryResponse) {}; 

    rpc ClientStreamingCall (stream ClientRequest) returns (ClientResponse) {};

    rpc ServerStreamingCall (ServerRequest) returns (stream ServerResponse) {};

    rpc BidirectionalStreamingCall (stream BiRequest) returns (stream BiResponse) {};
}

message UnaryRequest {
    string message = 1;
}

message UnaryResponse {
    string message = 1;
}

message ClientRequest {
    int32 number = 1;
}

message ClientResponse {
    int32 sum = 1;
}

message ServerRequest {
    string prefix = 1;
}

message ServerResponse {
    string message = 1;
}

message BiRequest {
    string message = 1;
}

message BiResponse {
    string message = 1;
}
